@@ -3,7 +3,7 @@ _ChangelogURI: http://packages.debian.org/changelogs/pool/%s/%s/%s/%s_%s/changel
 Suite: squeeze
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
-MatchURI: ftp[0-9]*\.[a-z]\.debian\.org
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian 6.0 'Squeeze' 
 Component: main
@@ -28,7 +28,7 @@ _Description: Security updates
 Suite: lenny
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
-MatchURI: ftp[0-9]*\.[a-z]\.debian\.org
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian 5.0 'Lenny' 
 Component: main
@@ -53,7 +53,7 @@ _Description: Security updates
 Suite: etch
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
-MatchURI: ftp[0-9]*\.[a-z]\.debian\.org
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian 4.0 'Etch'
 Component: main
@@ -78,7 +78,7 @@ _Description: Security updates
 Suite: sarge
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
-MatchURI: ftp[0-9]*\.[a-z]\.debian\.org
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian 3.1 'Sarge'
 Component: main
@@ -103,7 +103,7 @@ _Description: Security updates
 Suite: stable
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
-MatchURI: ftp[0-9]*\.[a-z]\.debian\.org
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian current stable release
 Component: main
@@ -116,7 +116,7 @@ _CompDescription: Non-DFSG-compatible Software
 Suite: testing
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
-MatchURI: ftp[0-9]*\.[a-z]\.debian\.org
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian testing
 Component: main
@@ -129,7 +129,7 @@ _CompDescription: Non-DFSG-compatible Software
 Suite: sid
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
-MatchURI: ftp[0-9]*\.[a-z]\.debian\.org
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian 'Sid' (unstable)
 Component: main
@@ -142,6 +142,7 @@ _CompDescription: Non-DFSG-compatible Software
 Suite: unstable
 RepositoryType: deb
 BaseURI: http://http.us.debian.org/debian/
+MatchURI: ftp[0-9]*\.([a-z]*\.){0,1}debian\.org
 MirrorsFile: /usr/share/python-apt/templates/Debian.mirrors
 _Description: Debian 'Sid' (unstable)
 Component: main
